feat(study): 학습(Main/Assist) API 스펙 정리 - written/practical/assist/reco/wrong-recap 라우트를 실제 컨트롤러 기준으로 재정렬 - 학습 플로우의 최신 API 계약을 맞춤