@@ -1,11 +1,14 @@
 package com.OhRyue.certpilot.study.service;
 
+import com.OhRyue.certpilot.study.client.ProgressQueryClient;
 import com.OhRyue.certpilot.study.domain.Question;
 import com.OhRyue.certpilot.study.domain.QuestionChoice;
 import com.OhRyue.certpilot.study.domain.UserProgress;
 import com.OhRyue.certpilot.study.domain.enums.Difficulty;
+import com.OhRyue.certpilot.study.domain.enums.ExamMode;
 import com.OhRyue.certpilot.study.domain.enums.QuestionType;
 import com.OhRyue.certpilot.study.dto.AssistDtos;
+import com.OhRyue.certpilot.study.dto.FlowDtos;
 import com.OhRyue.certpilot.study.repository.QuestionChoiceRepository;
 import com.OhRyue.certpilot.study.repository.QuestionRepository;
 import com.OhRyue.certpilot.study.repository.UserProgressRepository;
@@ -15,7 +18,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * 보조학습 - 필기(MCQ) 전용 서비스
@@ -28,68 +30,76 @@ public class AssistWrittenService {
 
   private static final List<Integer> ALLOWED_COUNTS = List.of(10, 20, 50);
 
-  private final QuestionRepository qRepo;
-  private final QuestionChoiceRepository choiceRepo;
-  private final UserProgressRepository progressRepo;
+  private final QuestionRepository questionRepository;
+  private final QuestionChoiceRepository choiceRepository;
+  private final UserProgressRepository progressRepository;
+  private final ProgressQueryClient progressQueryClient;
 
   /* ================= 카테고리 ================= */
-  public AssistDtos.QuizSet startByCategory(AssistDtos.CategoryStartReq req) {
+  public FlowDtos.StepEnvelope<AssistDtos.QuizSet> startByCategory(AssistDtos.CategoryStartReq req) {
     List<Long> topicIds = Optional.ofNullable(req.topicIds()).orElse(List.of());
     int want = sanitizeCount(req.count());
 
     if (topicIds.isEmpty()) {
       log.debug("[assist/written/category] empty topicIds -> empty set");
-      return new AssistDtos.QuizSet(List.of());
+      return wrap("ASSIST_WRITTEN", "ASSIST_WRITTEN_CATEGORY", req.userId(),
+          new AssistDtos.QuizSet(List.of()), "WRITTEN");
     }
 
-    List<Question> pool = qRepo.findAll().stream()
-        .filter(q -> topicIds.contains(q.getTopicId()))
-        .filter(q -> q.getType() == QuestionType.MCQ)
+    List<Question> pool = questionRepository
+        .findByTopicIdInAndModeAndType(topicIds, ExamMode.WRITTEN, QuestionType.MCQ)
+        .stream()
         .sorted(Comparator.comparingLong(Question::getId))
-        .collect(Collectors.toList());
+        .toList();
 
     log.debug("[assist/written/category] topicIds={}, poolSize={}, count={}", topicIds, pool.size(), want);
-    return pickMcq(pool, want);
+    return wrap("ASSIST_WRITTEN", "ASSIST_WRITTEN_CATEGORY", req.userId(), pickMcq(pool, want), "WRITTEN");
   }
 
   /* ================= 난이도 ================= */
-  public AssistDtos.QuizSet startByDifficulty(AssistDtos.DifficultyStartReq req) {
+  public FlowDtos.StepEnvelope<AssistDtos.QuizSet> startByDifficulty(AssistDtos.DifficultyStartReq req) {
     Difficulty diff = Objects.requireNonNullElse(req.difficulty(), Difficulty.NORMAL);
     int want = sanitizeCount(req.count());
 
-    List<Question> pool = qRepo.findAll().stream()
-        .filter(q -> q.getType() == QuestionType.MCQ)
-        .filter(q -> Objects.equals(q.getDifficulty(), diff))
+    List<Question> pool = questionRepository
+        .findByModeAndTypeAndDifficulty(ExamMode.WRITTEN, QuestionType.MCQ, diff)
+        .stream()
         .sorted(Comparator.comparingLong(Question::getId))
-        .collect(Collectors.toList());
+        .toList();
 
     log.debug("[assist/written/difficulty] diff={}, poolSize={}, count={}", diff, pool.size(), want);
-    return pickMcq(pool, want);
+    return wrap("ASSIST_WRITTEN", "ASSIST_WRITTEN_DIFFICULTY", req.userId(), pickMcq(pool, want), "WRITTEN");
   }
 
   /* ================= 약점 보완 ================= */
-  public AssistDtos.QuizSet startByWeakness(AssistDtos.WeaknessStartReq req) {
+  public FlowDtos.StepEnvelope<AssistDtos.QuizSet> startByWeakness(AssistDtos.WeaknessStartReq req) {
     int want = sanitizeCount(req.count());
 
-    // 휴리스틱: MCQ 정확도 낮은 토픽 우선
-    List<UserProgress> ps = progressRepo.findByUserId(req.userId());
-    ps.sort(Comparator.comparingDouble(this::acc).thenComparing(UserProgress::getUpdatedAt));
+    List<UserProgress> progresses = progressRepository.findByUserId(req.userId());
+    progresses.sort(Comparator.comparingDouble(this::writtenAccuracy)
+        .thenComparing(UserProgress::getUpdatedAt));
 
-    List<Long> targetTopics = ps.stream().map(UserProgress::getTopicId).limit(5).toList();
+    List<Long> targetTopics = progresses.stream()
+        .map(UserProgress::getTopicId)
+        .limit(5)
+        .toList();
 
-    List<Question> pool = (targetTopics.isEmpty()
-        ? qRepo.findAll().stream()
-        .filter(q -> q.getType() == QuestionType.MCQ)
-        .filter(q -> Objects.equals(q.getDifficulty(), Difficulty.NORMAL))
-        : qRepo.findAll().stream()
-        .filter(q -> q.getType() == QuestionType.MCQ)
-        .filter(q -> targetTopics.contains(q.getTopicId()))
-    ).sorted(Comparator.comparingLong(Question::getId)).collect(Collectors.toList());
+    List<Question> pool;
+    if (targetTopics.isEmpty()) {
+      pool = questionRepository
+          .findByModeAndTypeAndDifficulty(ExamMode.WRITTEN, QuestionType.MCQ, Difficulty.NORMAL);
+    } else {
+      pool = questionRepository
+          .findByTopicIdInAndModeAndType(targetTopics, ExamMode.WRITTEN, QuestionType.MCQ);
+    }
+    pool = pool.stream()
+        .sorted(Comparator.comparingLong(Question::getId))
+        .toList();
 
     log.debug("[assist/written/weakness] userId={}, targets={}, poolSize={}, count={}",
         req.userId(), targetTopics, pool.size(), want);
 
-    return pickMcq(pool, want);
+      return wrap("ASSIST_WRITTEN", "ASSIST_WRITTEN_WEAKNESS", req.userId(), pickMcq(pool, want), "WRITTEN");
   }
 
   /* ================= 내부 유틸 ================= */
@@ -112,15 +122,23 @@ public class AssistWrittenService {
     List<AssistDtos.QuizQ> items = new ArrayList<>(lim);
 
     for (Question q : copy.stream().limit(lim).toList()) {
-      List<QuestionChoice> raw = Optional.ofNullable(choiceRepo.findByQuestionId(q.getId())).orElse(List.of());
+      List<QuestionChoice> raw = Optional.ofNullable(choiceRepository.findByQuestionId(q.getId())).orElse(List.of());
 
       List<AssistDtos.Choice> choices = raw.stream()
           .filter(Objects::nonNull)
           .sorted(byLabelNullSafe)
-          .map(c -> new AssistDtos.Choice(nz(c.getLabel()), nz(c.getText())))
+          .map(c -> new AssistDtos.Choice(
+              Optional.ofNullable(c.getLabel()).orElse(""),
+              Optional.ofNullable(c.getContent()).orElse("")
+          ))
           .toList();
 
-      items.add(new AssistDtos.QuizQ(q.getId(), nz(q.getText()), choices, q.getImageUrl()));
+      items.add(new AssistDtos.QuizQ(
+          q.getId(),
+          Optional.ofNullable(q.getStem()).orElse(""),
+          choices,
+          q.getImageUrl()
+      ));
     }
 
     return new AssistDtos.QuizSet(items);
@@ -135,13 +153,53 @@ public class AssistWrittenService {
         .orElse(20);
   }
 
-  /** MCQ 정확도 (correct / total). total=0 방지 */
-  private double acc(UserProgress p) {
-    int total = Math.max(1, nz(p.getMcqTotal()));
-    int correct = nz(p.getMcqCorrect());
-    return (double) correct / total;
+  /** writtenAccuracy(%) 기반 휴리스틱. */
+  private double writtenAccuracy(UserProgress progress) {
+    return Optional.ofNullable(progress.getWrittenAccuracy()).orElse(0.0);
   }
 
-  private static int nz(Integer v) { return v == null ? 0 : v; }
-  private static String nz(String s) { return s == null ? "" : s; }
+  private FlowDtos.StepEnvelope<AssistDtos.QuizSet> wrap(String mode,
+                                                         String step,
+                                                         String userId,
+                                                         AssistDtos.QuizSet payload,
+                                                         String reportMode) {
+    Map<String, Object> meta = fetchStats(userId, reportMode);
+    return new FlowDtos.StepEnvelope<>(
+        null,
+        mode,
+        step,
+        "IN_PROGRESS",
+        null,
+        meta,
+        payload
+    );
+  }
+
+  private Map<String, Object> fetchStats(String userId, String reportMode) {
+    Map<String, Object> meta = new HashMap<>();
+    if (userId == null || userId.isBlank()) {
+      return meta;
+    }
+    try {
+      ProgressQueryClient.GoalToday goal = progressQueryClient.getTodayGoal(userId);
+      if (goal != null) {
+        meta.put("todayGoal", Map.of(
+            "target", Optional.ofNullable(goal.targetCount()).orElse(0),
+            "progress", Optional.ofNullable(goal.progressCount()).orElse(0)
+        ));
+      }
+    } catch (Exception ex) {
+      log.debug("Failed to fetch today goal for {}: {}", userId, ex.getMessage());
+    }
+    try {
+      ProgressQueryClient.Overview overview = progressQueryClient.overview(userId, reportMode);
+      if (overview != null) {
+        meta.put("weeklySolved", overview.problemsThisWeek());
+        meta.put("avgAccuracy", overview.avgAccuracy());
+      }
+    } catch (Exception ex) {
+      log.debug("Failed to fetch overview for {}: {}", userId, ex.getMessage());
+    }
+    return meta;
+  }
 }
